--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -17,16 +17,16 @@
             <button id="jsMode">채우기</button>
             <button id="jsSave">저장하기</button>
         </div>
-        <div class="controls_colors" id="jsColors">
-            <div class="controls_color jsColor" style="background-color:#2c2c2c"></div>
-            <div class="controls_color jsColor" style="background-color:white"></div>
-            <div class="controls_color jsColor" style="background-color:#ff3b30"></div>
-            <div class="controls_color jsColor" style="background-color:#ff9500"></div>
-            <div class="controls_color jsColor" style="background-color:#ffcc00"></div>
-            <div class="controls_color jsColor" style="background-color:#4cd963"></div>
-            <div class="controls_color jsColor" style="background-color:#5ac8fa"></div>
-            <div class="controls_color jsColor" style="background-color:#0579ff"></div>
-            <div class="controls_color jsColor" style="background-color:#5856d6"></div>
+        <div class="controls_colors">
+            <div class="controls_color_btn" style="background-color:#2c2c2c"></div>
+            <div class="controls_color_btn" style="background-color:white"></div>
+            <div class="controls_color_btn" style="background-color:#ff3b30"></div>
+            <div class="controls_color_btn" style="background-color:#ff9500"></div>
+            <div class="controls_color_btn" style="background-color:#ffcc00"></div>
+            <div class="controls_color_btn" style="background-color:#4cd963"></div>
+            <div class="controls_color_btn" style="background-color:#5ac8fa"></div>
+            <div class="controls_color_btn" style="background-color:#0579ff"></div>
+            <div class="controls_color_btn" style="background-color:#5856d6"></div>
         </div>
     </div>
     <script src="app.js"></script>
