--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -18,15 +18,15 @@
             <button id="jsSave">저장하기</button>
         </div>
         <div class="controls_colors">
-            <div class="controls_color_btn" style="background-color:#2c2c2c"></div>
-            <div class="controls_color_btn" style="background-color:white"></div>
-            <div class="controls_color_btn" style="background-color:#ff3b30"></div>
-            <div class="controls_color_btn" style="background-color:#ff9500"></div>
-            <div class="controls_color_btn" style="background-color:#ffcc00"></div>
-            <div class="controls_color_btn" style="background-color:#4cd963"></div>
-            <div class="controls_color_btn" style="background-color:#5ac8fa"></div>
-            <div class="controls_color_btn" style="background-color:#0579ff"></div>
-            <div class="controls_color_btn" style="background-color:#5856d6"></div>
+            <button class="controls_color_btn" aria-label="#2c2c2c" style="background-color:#2c2c2c"></button>
+            <button class="controls_color_btn" aria-label="#white" style="background-color:white"></button>
+            <button class="controls_color_btn" aria-label="#ff3b30" style="background-color:#ff3b30"></button>
+            <button class="controls_color_btn" aria-label="#ff9500" style="background-color:#ff9500"></button>
+            <button class="controls_color_btn" aria-label="#ffcc00" style="background-color:#ffcc00"></button>
+            <button class="controls_color_btn" aria-label="#4cd963" style="background-color:#4cd963"></button>
+            <button class="controls_color_btn" aria-label="#5ac8fa" style="background-color:#5ac8fa"></button>
+            <button class="controls_color_btn" aria-label="#0579ff" style="background-color:#0579ff"></button>
+            <button class="controls_color_btn" aria-label="#5856d6" style="background-color:#5856d6"></button>
         </div>
     </div>
     <script src="app.js"></script>
