--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="controls_colors">
             <button class="controls_color_btn" aria-label="#2c2c2c" style="background-color:#2c2c2c"></button>
-            <button class="controls_color_btn" aria-label="#white" style="background-color:white"></button>
+            <button class="controls_color_btn" aria-label="white" style="background-color:white"></button>
             <button class="controls_color_btn" aria-label="#ff3b30" style="background-color:#ff3b30"></button>
             <button class="controls_color_btn" aria-label="#ff9500" style="background-color:#ff9500"></button>
             <button class="controls_color_btn" aria-label="#ffcc00" style="background-color:#ffcc00"></button>
