--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -29,6 +29,9 @@
             <button class="controls_color_btn" aria-label="#5856d6" style="background-color:#5856d6"></button>
         </div>
     </div>
+    <svg id="cursor" width="2.5" height="2.5">
+        <circle cx="1.25" cy="1.25" r="2.5" fill="#2c2c2c" />
+    </svg>
     <script src="app.js"></script>
 </body>
 </html>
