--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -8,7 +8,6 @@
     <title>JSPaint</title>
 </head>
 <body>
-    <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
         <div class="controls_range">
             <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1">
@@ -17,17 +16,20 @@
             <button id="jsMode">채우기</button>
             <button id="jsSave">저장하기</button>
         </div>
-        <div class="controls_colors">
-            <button class="controls_color_btn" aria-label="#2c2c2c" style="background-color:#2c2c2c"></button>
-            <button class="controls_color_btn" aria-label="white" style="background-color:white"></button>
-            <button class="controls_color_btn" aria-label="#ff3b30" style="background-color:#ff3b30"></button>
-            <button class="controls_color_btn" aria-label="#ff9500" style="background-color:#ff9500"></button>
-            <button class="controls_color_btn" aria-label="#ffcc00" style="background-color:#ffcc00"></button>
-            <button class="controls_color_btn" aria-label="#4cd963" style="background-color:#4cd963"></button>
-            <button class="controls_color_btn" aria-label="#5ac8fa" style="background-color:#5ac8fa"></button>
-            <button class="controls_color_btn" aria-label="#0579ff" style="background-color:#0579ff"></button>
-            <button class="controls_color_btn" aria-label="#5856d6" style="background-color:#5856d6"></button>
+    </div>
+    <div id="drawingTools">
+        <div class="pallete">
+            <button class="color_btn" aria-label="#2c2c2c" style="background-color:#2c2c2c"></button>
+            <button class="color_btn" aria-label="white" style="background-color:white"></button>
+            <button class="color_btn" aria-label="#ff3b30" style="background-color:#ff3b30"></button>
+            <button class="color_btn" aria-label="#ff9500" style="background-color:#ff9500"></button>
+            <button class="color_btn" aria-label="#ffcc00" style="background-color:#ffcc00"></button>
+            <button class="color_btn" aria-label="#4cd963" style="background-color:#4cd963"></button>
+            <button class="color_btn" aria-label="#5ac8fa" style="background-color:#5ac8fa"></button>
+            <button class="color_btn" aria-label="#0579ff" style="background-color:#0579ff"></button>
+            <button class="color_btn" aria-label="#5856d6" style="background-color:#5856d6"></button>
         </div>
+        <canvas id="jsCanvas" class="canvas"></canvas>
     </div>
     <svg id="cursor" width="2.5" height="2.5">
         <circle cx="1.25" cy="1.25" r="2.5" fill="#2c2c2c" />
