update to responsive web app

--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -18,7 +18,9 @@
         </div>
     </div>
     <div id="drawingTools">
-        <canvas id="jsCanvas" class="canvas"></canvas>
+        <div id="canvasWrap">
+            <canvas id="jsCanvas" class="canvas"></canvas>
+        </div>
         <div class="pallete">
             <button class="color_btn" aria-label="#2c2c2c" style="background-color:#2c2c2c"></button>
             <button class="color_btn" aria-label="white" style="background-color:white"></button>
