Add un-redo btn

--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -33,6 +33,10 @@
             <button class="color_btn" aria-label="#5856d6" style="background-color:#5856d6"></button>
         </div>
     </div>
+    <div class="undoRedoBtns">
+        <button id="undoBtn">←</button>
+        <button id="redoBtn">→</button>
+    </div>
     <svg id="cursor" width="2.5" height="2.5">
         <circle cx="1.25" cy="1.25" r="2.5" fill="#2c2c2c" />
     </svg>
