--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -33,7 +33,7 @@
             <button class="color_btn" aria-label="#5856d6" style="background-color:#5856d6"></button>
         </div>
     </div>
-    <div class="undoRedoBtns">
+    <div class="rollbackBtns">
         <button id="undoBtn">←</button>
         <button id="redoBtn">→</button>
     </div>
