--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="color-scheme" content="darklight" />
     <link rel="stylesheet" href="styles.css">
     <title>JSPaint</title>
 </head>
