--- a/jspaint/index.html
+++ b/jspaint/index.html
@@ -14,8 +14,9 @@
             <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1">
         </div>
         <div class="controls_btns">
-            <button id="jsMode">채우기</button>
-            <button id="jsSave">저장하기</button>
+            <button id="modeBtn">채우기</button>
+            <button id="saveBtn">저장하기</button>
+            <button id="themeBtn">다크모드로 보기</button>
         </div>
     </div>
     <div id="drawingTools">
